# ffn-polars

./: .gitignore  404.html  Cargo.toml  LICENSE  README.md  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: docs.yml  test.yml
api/df/: index.html
api/expr/: index.html
docs/api/: expr.md
ffn_polars/: __init__.py  config.py  core.py  ffn.py  registry.py
ffn_polars/df/: __init__.py  core.py
ffn_polars/expr/: __init__.py  core.py  ratios.py  returns.py  risk.py  temporal.py
ffn_polars/expr/eod/: ratios.py  returns.py  risk.py  temporal.py
ffn_polars/expr/tick/: activity.py  direction.py  flow.py  price.py  utils.py  volatility.py
ffn_polars/sim/: __init__.py  common.py  market_events.py  quotes.py  trades.py
ffn_polars/sim/plugins/: base.py  registry.py
ffn_polars/sim/utils/: preview.py
ffn_polars/utils/: __init__.py  decorators.py  guardrails.py  typing.py
getting-started/: index.html
search/: search_index.json
src/: lib.rs
src/ffn_polars/: __init__.py  core.py
tests/: fixtures.py  test_core.py  utils.py
tests/df/: test_df_core.py
tests/expr/: test_expr_core.py  test_tick.py
usage/dataframe/: index.html
usage/examples/: index.html
usage/expressions/: index.html
