[project]
name = "ffn-polars"
version = "0.1.0"
description = "A polars implementation of ffn"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.2.4",
 "polars>=1.25.2",
 "pyarrow>=19.0.1",
]
keywords = [
  "python",
  "finance",
  "quant",
  "quant finance",
  "algotrading",
  "algorithmic trading",
  "high performance computing",
]

# [project.scripts]
# ffn-polars = "ffn_polars:__init__"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
module-name = "ffn_polars._rust"
bindings = "pyo3"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[dependency-groups]
dev = ["pytest>=8.3.5", "pytest-cov>=6.1.1"]
